--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "build-gh": "parcel build --public-url 'https://{hamzaiftkhar}.github.io/{My-Portfolio-MLSA-Technical-Onboarding-}'",
+    "build-gh": "parcel build --public-url 'https://hamzaiftkhar.github.io/My-Portfolio-MLSA-Technical-Onboarding-'",
     "predeploy": "npm run build-gh",
     "deploy": "gh-pages -d dist"
   },
